--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,4 +1,12 @@
 {
-  "title": "Blood test",
-  "Message" : "This is English"
+  "title": "Анализ крови",
+  "disclaimer": "Disclaimer",
+  "disclaimer_text": "Это мобильное приложение предназначено только для информационных целей. Оно не заменяет профессиональную медицинскую консультацию, диагностику или лечение. У вас может быть случай, который может быть не представлен в этом приложении. Пожалуйста, обратитесь к врачу, если вы беспокоитесь о своем здоровье.",
+  "agree_and_start": "Согласиться и начать",
+  "choose_gender": "Пожалуйста, выберите пол обследуемого",
+  "male": "Мужчина",
+  "female": "Женщина",
+  "other": "Другой",
+  "input_title": "Пожалуйста, предоставьте результаты анализа крови ниже",
+  "calculate": "Рассчитать"
 }
