--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -8,5 +8,6 @@
   "female": "Женщина",
   "other": "Другой",
   "input_title": "Пожалуйста, предоставьте результаты анализа крови ниже",
-  "calculate": "Рассчитать"
+  "calculate": "Рассчитать",
+  "finish": "Завершить"
 }
